# citreelo

./: Cargo.toml  README.md  bench.sh
.github/workflows/: ci.yml
benches/: bench_build.rs  bench_parser.rs  bench_solve.rs
src/: bdd.rs  ctl.rs  kripke.rs  lib.rs  parser.rs  solve.rs
src/test/: example1.rs  mod.rs  model.rs  parser.rs
src/util/: mod.rs  viz_kripke.rs
tests/: example1.rs  test_boolean_ops.rs  test_ctl_identities.rs  test_fixpoint_ops.rs  test_initial_states.rs  test_kripke_validation.rs  test_nested_formulas.rs  test_next_ops.rs  test_oracle_differential.rs  test_parser.rs  test_readme_example.rs  test_viz.rs
tests/common/: asserts.rs  drawer.rs  generators.rs  mod.rs  model.rs  oracle.rs  parser.rs  zoo.rs
